modules/grammars/environment/src/test/resources/cocos/invalid/BlockedInstruction.ddf
PACKAGE valid

COMPONENT DOCKERFILE ImportComponent

FROM "registry.git.rwth-aachen.de/monticore/embeddedmontiarc/utilities/Sol/build:latest"

CMD ["SomeCoolCommand", "SomeCoolParameter", "SomeOtherCoolParameter"]